Correção do logo favicon, criado editar favicon, tratamento do modal gostei desse imovel

--- a/js-imoveis/css/adm-style.css
+++ b/js-imoveis/css/adm-style.css
@@ -9,6 +9,10 @@
 .img_preview_banner {
     width: 150px;
 }
+.img_preview_title {
+    width: 150px;
+    
+}
 .img_preview_logo {
     width: 120px;
 }
